--- a/css/style.css
+++ b/css/style.css
@@ -159,13 +159,12 @@ body {
   background-color: #f5f4fa;
   color: rgba(33, 33, 33, 1);
 }
-
+/* button porfolio */
 .btn-portfolio {
   display: flex;
   justify-content: center;
   margin-top: 0;
-  margin-bottom: 34px;
-  padding-bottom: 16px;
+  padding-bottom: 50px;
 }
 .btn-portfolio .portfo-item + .portfo-item {
   margin-left: 8px;
@@ -261,17 +260,37 @@ body {
   margin-bottom: 30px;
   text-align: center;
 }
-/* section portfolio */
+/* ____section portfolio____ */
 .portfo-section {
   margin-top: 94px;
-}
+  margin-bottom: 94px;
+  }
 .portfolio {
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
   flex-wrap: wrap;
   align-content: space-between;
 }
+.p-item>img{
+  float: left;
+  display: block;
+}
+.portfolio .p-item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  background-color: aqua;
+}
+
+/* .portfolio .p-item + .p-item {
+  margin-left: 30px;
+} */
+.portfolio .p-item:nth-child(3n){
+  margin-right:0;
+}
+.portfolio .p-item:nth-last-child(-n+3){
+  margin-bottom: 94px;
+}
+
 .title-portfo {
   font-weight: 700;
   font-size: 18px;
