--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,13 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
-  /* display: flex; */
+  display: flex;
 }
 .container {
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid green;
-  width: 1170px;
+  /* outline: 1px solid green; */
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -189,7 +189,6 @@ body {
 
 /*___section____ */
 .section-pecul {
-  /* display: flex; */
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -205,12 +204,10 @@ body {
   margin-left: 30px;
 }
 .title-pecul {
-  font-weight: 700;
+  /* font-weight: pecul-desclist-do700; */
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  /* margin-top: 0;
-  margin-bottom: 10px; */
 }
 .pecul-desc {
   font-size: 14px;
@@ -228,6 +225,9 @@ body {
   text-align: center;
   margin-top: 0;
   margin-bottom: 50px;
+}
+.do-item + .do-item{
+  margin-left: 30px;
 }
 .title-do {
   margin-top: 0;
@@ -252,6 +252,9 @@ body {
   margin-top: 0;
   margin-bottom: 0px;
 }
+.list-team+.list-team{
+  margin-left: 30px;
+}
 .team-desc {
   font-size: 14px;
   line-height: 1.7;
@@ -264,13 +267,13 @@ body {
 .portfo-section {
   margin-top: 94px;
   margin-bottom: 94px;
-  }
+}
 .portfolio {
   display: flex;
   flex-wrap: wrap;
   align-content: space-between;
 }
-.p-item>img{
+.p-item > img {
   float: left;
   display: block;
 }
@@ -278,17 +281,16 @@ body {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-  background-color: aqua;
 }
 
 /* .portfolio .p-item + .p-item {
   margin-left: 30px;
 } */
-.portfolio .p-item:nth-child(3n){
-  margin-right:0;
+.portfolio .p-item:nth-child(3n) {
+  margin-right: 0;
 }
-.portfolio .p-item:nth-last-child(-n+3){
-  margin-bottom: 94px;
+.portfolio .p-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 .title-portfo {
@@ -325,5 +327,4 @@ body {
 }
 .footer > .container > a {
   color: white;
-  /* padding-bottom: 45px; */
-}
+ }
