--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,8 @@ body {
   letter-spacing: 0.06em;
 }
 .portfo-desc {
+  padding-top: 4px;
+  padding-bottom: 20px;
   font-size: 16px;
   line-height: 1.88;
 }
