--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 .container {
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid green;
+  /* outline: 1px solid green; */
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
