--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ body {
   background-color: white;
   color: var(--texst-color);
   letter-spacing: 0.03em;
- 
 }
 .list-ul {
   list-style: none;
@@ -65,7 +64,7 @@ body {
 }
 .site-nav .nav-item + .nav-item {
   margin-left: 50px;
- }
+}
 /* .site-nav li {
   outline: red solid;
 } */
@@ -113,7 +112,7 @@ body {
   color: rgb(255, 255, 255);
 
   text-align: center;
- }
+}
 .title-hero {
   margin-top: 0;
   margin-bottom: 40px;
@@ -145,8 +144,8 @@ body {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  /* height: 50;
-  min-width: 200; */
+  height: 50px;
+  min-width: 200px;
   border-radius: 4px;
 }
 .button-hero:hover,
@@ -159,7 +158,8 @@ body {
   display: flex;
   justify-content: center;
   margin-top: 0;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
+  /* padding-bottom: 50px; */
 }
 .btn-portfolio .portfo-item + .portfo-item {
   margin-left: 8px;
@@ -183,6 +183,7 @@ body {
 }
 
 /*___section____ */
+
 .section-pecul {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -205,6 +206,9 @@ body {
   text-transform: uppercase;
 }
 .pecul-desc {
+  padding: 0;
+  margin: 0;
+  border: 0;
   font-size: 14px;
   line-height: 1.71;
 }
@@ -240,8 +244,6 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.88;
-  margin-top: 30px;
-  margin-bottom: 0;
   text-align: center;
 }
 .list-team {
@@ -252,12 +254,14 @@ body {
 .list-team + .list-team {
   margin-left: 30px;
 }
+.desc-teams {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
 .team-desc {
   font-size: 14px;
   line-height: 1.7;
   width: 270px;
-  margin-top: 10px;
-  margin-bottom: 30px;
   text-align: center;
 }
 /* ____section portfolio____ */
@@ -270,8 +274,9 @@ body {
   flex-wrap: wrap;
   align-content: space-between;
 }
+
 .portfolio .p-item {
-  width: ((100%-60px)/3);
+  width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
 }
@@ -282,17 +287,18 @@ body {
 .portfolio .p-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-
+.specific {
+  /* min-height: 110px; */
+  padding: 20px 24px;
+  outline: 1px solid #eeeeee;
+}
 .title-portfo {
-  padding-top: 20px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
 .portfo-desc {
-  padding-top: 4px;
-  padding-bottom: 20px;
   font-size: 16px;
   line-height: 1.88;
 }
